# Portofoliu-CV

Cinema-Python/: README.md  carduri.json  filme.json  main.py  rezervari.json  test_card_repository.json  test_film_repository.json  test_rezervare_repository.json  test_service_card.json  test_service_film.json  test_service_rezervare.json  utils.py
Cinema-Python/Domain/: card_client.py  card_validator.py  film.py  film_validator.py  operation_add.py  operation_delete.py  operation_delete_cascada.py  operation_multi_add.py  operation_multi_delete.py  operation_multi_update.py  operation_undoredo.py  operation_update.py  rezervare.py  rezervare_validator.py
Cinema-Python/Repository/: repository.py  (+1 more)
Library-C++/: CMakeLists.txt  Librarie.txt  README.txt  main.cpp
Library-C++/Domain/: Carte.cpp  Carte.h
Library-C++/Exceptions and Validators/: MyException.cpp  MyException.h  ValidatorCarte.cpp  ValidatorCarte.h
Library-C++/Repository/: Repo.cpp  Repo.h  RepoFile.cpp  RepoFile.h
Library-C++/Service/: Service.cpp  Service.h  ServiceFile.cpp  ServiceFile.h
Library-C++/Tests/: Teste.cpp  Teste.h
Library-C++/UI/: UI.cpp  UI.h
Social Network-C++/: CMakeLists.txt  Friends.txt  README.txt  Users.txt  main.cpp
Social Network-C++/Domain/: Friendship.cpp  Friendship.h  Message.cpp  Message.h  User.cpp  User.h
Social Network-C++/Repository/: RepoFileFriendships.cpp  RepoFileFriendships.h  RepoFileUser.cpp  RepoFileUser.h
Social Network-C++/Service/: Service.cpp  Service.h
Social Network-C++/TAD/: ABC.h  ABCNode.h  Lista.h
Social Network-C++/UI/: UI.cpp  UI.h
(+13 files in other folders)
